--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiogram==2.25.1
-APScheduler==3.10.4
-aiohttp==3.8.6
+aiohttp==3.9.5
+psycopg2-binary==2.9.9
 SQLAlchemy==2.0.23
-uvloop==0.19.0 ; sys_platform != "win32"
+alembic==1.13.1
+python-dotenv==1.0.1
