--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,17 @@
 services:
   - type: web
-    name: vault-bot
-    env: python
+    name: telegram-bot
+    env: docker
     plan: free
-    buildCommand: ""
-    startCommand: python bot.py
+    autoDeploy: true
     envVars:
       - key: BOT_TOKEN
-        sync: false   # set in Render dashboard
+        sync: false
       - key: OWNER_ID
         sync: false
-      - key: UPLOAD_CHANNEL_ID
+      - key: DATABASE_URL
+        value: postgresql://neondb_owner:npg_9QTvO4MhbWgB@ep-red-heart-af32eovr-pooler.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+      - key: WEBHOOK_URL
         sync: false
-      - key: DB_CHANNEL_ID
-        sync: false
-      - key: DB_PATH
-        value: "/data/database.sqlite3"
-      - key: JOB_DB_PATH
-        value: "/data/jobs.sqlite"
-      - key: PORT
-        value: "10000"
-      - key: LOG_LEVEL
-        value: "INFO"
-      - key: BROADCAST_CONCURRENCY
-        value: "12"
-      - key: RENDER_EXTERNAL_HOSTNAME
-        sync: true
+    healthCheckPath: /health
+    region: oregon
