--- a/.dockerignore
+++ b/.dockerignore
@@ -3,5 +3,14 @@ __pycache__/
 *.pyo
 *.pyd
 *.db
-*.git
-*.env
+*.sqlite3
+.env
+.env.* 
+.git
+.gitignore
+.vscode
+.idea
+*.log
+__pycache__
+dist
+build
