--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiogram==2.25.1
-aiohttp==3.8.6
+asyncpg==0.27.0
+aiohttp==3.8.5
+python-dotenv==1.0.0
+psycopg2-binary==2.9.7
 SQLAlchemy==2.0.23
-alembic==1.13.1
-python-dotenv==1.0.1
-asyncpg==0.29.0
