--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,32 @@
 services:
   - type: web
-    name: telegram-bot
-    env: docker
+    name: telegram-file-bot
+    env: python
     plan: free
-    dockerfilePath: ./Dockerfile
-    autoDeploy: true
+    branch: main
+    buildCommand: pip install -r requirements.txt
+    startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
         sync: false
-      - key: DATABASE_URL
-        sync: false
       - key: OWNER_ID
         sync: false
-      - key: UPLOAD_CHANNEL_ID
-        sync: false
-      - key: RENDER_EXTERNAL_URL
-        sync: true   # Render provides this automatically at runtime
+      - key: DATABASE_URL
+        fromDatabase:
+          name: bot-db
+          property: connectionString
+      - key: RENDER_URL
+        fromService:
+          type: web
+          name: telegram-file-bot
+          property: url
+      - key: UPLOAD_CHANNEL
+        value: "@your_upload_channel"
+      - key: RENDER
+        value: true
+
+databases:
+  - name: bot-db
+    plan: free
+    databaseName: botdb
+    user: botuser
