--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,11 @@
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.db
-*.sqlite3
-.env
-.env.* 
 .git
 .gitignore
-.vscode
-.idea
-*.log
+README.md
+.env
+*.pyc
 __pycache__
-dist
-build
+*.log
+.DS_Store
+Dockerfile
+docker-compose.yml
+render.yaml
