--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiogram==2.25.1
-APScheduler==3.10.4
-aiohttp==3.8.6
-SQLAlchemy==2.0.23
-asyncpg==0.29.0   
-psycopg2-binary==2.9.9   
+sqlalchemy[asyncio]==1.4.46
+asyncpg==0.27.0
+aiohttp==3.8.4
+apscheduler==3.10.1
+python-dotenv==1.0.0
