--- a/render.yaml
+++ b/render.yaml
@@ -2,24 +2,17 @@ services:
   - type: web
     name: telegram-upload-bot
     env: python
+    plan: starter
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python telegram_upload_bot.py"
-    healthCheckPath: /health
+    startCommand: "python main.py"
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: neon-db-instance-name # ❗️ IMPORTANT: Change this to your Neon DB name in Render
-          property: connectionString
       - key: BOT_TOKEN
-        sync: false # Set this secret in the Render dashboard
+        sync: false
+      - key: DATABASE_URL
+        sync: false
       - key: OWNER_ID
-        sync: false # Set this secret in the Render dashboard
-      - key: UPLOAD_CHANNEL
-        sync: false # Set this secret in the Render dashboard
+        sync: false
+      - key: UPLOAD_CHANNEL_ID
+        sync: false
       - key: WEBHOOK_URL
-        fromService:
-          type: web
-          name: telegram-upload-bot # This should match the 'name' of this service
-          property: url
-      - key: PYTHON_VERSION
-        value: 3.11.5
+        sync: false
