--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-aiogram==2.25.1
-sqlalchemy[asyncio]==1.4.46
+aiogram==3.0.2         # stable 3.x version
+SQLAlchemy==1.4.49
 asyncpg==0.27.0
 aiohttp==3.8.4
-apscheduler==3.10.1
 python-dotenv==1.0.0
-python-telegram-bot==20.7
