--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-aiogram==3.22.0
-SQLAlchemy==1.4.49
+
+aiogram==3.0.5
 asyncpg==0.27.0
-aiohttp==3.8.4
-python-dotenv==1.0.0
+SQLAlchemy==2.1.2
+alembic==1.12.0
+aiohttp==3.9.9
+python-dotenv==1.0.1
