--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiogram==3.0.3
+aiogram==2.25.0
 SQLAlchemy==1.4.51
 asyncpg==0.26.0
-aiohttp==3.8.5
+aiohttp==3.8.6
 python-dotenv==0.21.0
+psycopg2-binary==2.9.9
