--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 aiogram==2.25.0
-SQLAlchemy==1.4.49
-asyncpg==0.27.0
 aiohttp==3.8.6
-python-dotenv==1.0.0
+asyncpg==0.29.0
+SQLAlchemy==1.4.52
+alembic==1.13.2
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+uvicorn==0.30.3
+gunicorn==22.0.0
